[gd_scene load_steps=5 format=3 uid="uid://c5h7k8nan0p1q"]

[ext_resource type="Script" path="res://scripts/ui/trading_dialog.gd" id="1_trading"]
[ext_resource type="Texture2D" uid="uid://icon_scrap" path="res://assets/sprites/ui/icons/icon_scrap.png" id="2_scrap"]
[ext_resource type="Texture2D" uid="uid://icon_fuel" path="res://assets/sprites/ui/icons/icon_fuel.png" id="3_fuel"]
[ext_resource type="Texture2D" uid="uid://icon_hull" path="res://assets/sprites/ui/icons/icon_hull.png" id="4_hull"]

[node name="TradingDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_trading")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0.05, 0.75)

[node name="GlowEffect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -258.0
offset_right = 308.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.15)

[node name="BorderOuter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -254.0
offset_right = 304.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.6)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundGradient" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.02, 0.04, 0.08, 0.98)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="LeftDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(40, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.5)

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.69, 0.0, 1)
theme_override_font_sizes/font_size = 24
text = "[ TRADING OUTPOST ]"
horizontal_alignment = 1

[node name="RightDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(40, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.5)

[node name="ResourcesHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "CURRENT RESOURCES"
horizontal_alignment = 1

[node name="ResourcesContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1
theme_override_constants/separation = 30

[node name="ScrapDisplay" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="ScrapIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer/ScrapDisplay"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_scrap")
expand_mode = 1
stretch_mode = 5

[node name="ScrapLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer/ScrapDisplay"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.69, 0.0, 1)
theme_override_font_sizes/font_size = 18
text = "SCRAP: 0"

[node name="FuelDisplay" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="FuelIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer/FuelDisplay"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("3_fuel")
expand_mode = 1
stretch_mode = 5

[node name="FuelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer/FuelDisplay"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1.0, 1)
theme_override_font_sizes/font_size = 18
text = "FUEL: 0"

[node name="HullDisplay" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="HullIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer/HullDisplay"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("4_hull")
expand_mode = 1
stretch_mode = 5

[node name="HullLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ResourcesContainer/HullDisplay"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "HULL: 100%"

[node name="HSeparator" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.3)

[node name="TradesHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "AVAILABLE TRADES"
horizontal_alignment = 1

[node name="TradesContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="FuelTradeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TradesContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1.0, 1)
theme_override_colors/font_hover_color = Color(0.6, 0.9, 1.0, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.5, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "[ BUY FUEL CELL: 10 SCRAP ]"

[node name="RepairTradeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TradesContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_colors/font_hover_color = Color(0.7, 0.9, 1.0, 1)
theme_override_colors/font_pressed_color = Color(0.3, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "[ REPAIR HULL +10%: 15 SCRAP ]"

[node name="HSeparator2" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.3)

[node name="StatusLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.2, 1.0, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_colors/font_hover_color = Color(0.7, 1.0, 1.0, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.6, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "[ DEPART ]"

[node name="CornerTL" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = -292.0
offset_bottom = -242.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.8)

[node name="CornerTR" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 292.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = -242.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.8)

[node name="CornerBL" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 242.0
offset_right = -292.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.8)

[node name="CornerBR" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 292.0
offset_top = 242.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1.0, 0.69, 0.0, 0.8)
